@@ -67,7 +67,7 @@ SRCS=	ldap-nss.c \
 OBJS=$(SRCS:.c=.o)
 LIB=$(MODULE).so.1
 
-NSFLAGS=-I/usr/local/ldapsdk/include -DLDAP_VERSION3_API -DNETSCAPE_API_EXTENSIONS
+NSFLAGS=-I/usr/local/ldapsdk/include -DLDAP_VERSION3_API -DNETSCAPE_API_EXTENSIONS -DRFC2307BIS
 
 SUNFLAGS=-DSUN_NSS -D_REENTRANT -DHAVE_SNPRINTF -D__EXTENSIONS__
 INCDIRS=
